# paper_implementations

./: .gitignore  README.md
gan/: experimentation.ipynb
gans/dcgan/: dcgan.py  pyproject.toml  train.py
gans/dcgan/notebooks/: DCGAN.ipynb
gans/gan/: gan.py  pyproject.toml  train.py
gans/gan/notebooks/: GAN.ipynb
